# beefree-agent-demo

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: docs.yml
backend/: .env.example  agent.py  config.py  main.py  mcp_mock.py  pyproject.toml
docs/: architecture.md  configuration.md  index.md  quickstart.md
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: schemas.ts  useChat.ts
frontend/src/components/: ChatPanel.tsx  JsonPreviewPanel.tsx  Layout.tsx
frontend/src/routes/: chat.tsx
frontend/src/store/: chatStore.ts
