[project]
name = "beefree-agent-demo"
version = "0.1.0"
description = "PydanticAI + MCP demo targeting Beefree SDK"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic-settings>=2.5.0",
    "pydantic-ai[anthropic,openai,gemini]>=0.0.49",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "auto"
